--- a/index.html
+++ b/index.html
@@ -37,16 +37,14 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="https://geofflord.github.io/earwaxtreatment/"><!--Site Name-->
-Site Name
-<!--endSite Name--></a>
+        <a class="navbar-brand" href="https://geofflord.github.io/earwaxtreatment/"><!--Site Name-->Site Name<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="https://geofflord.github.io/earwaxtreatment/">Home
+              <a class="nav-link" href="https://geofflord.github.io/earwaxtreatment/index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -139,9 +137,7 @@ Site Name
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white"><!--Footer-->
-Add your footer text here
-<!--endFooter--></p>
+        <p class="m-0 text-center text-white"><!--Footer-->Add your footer text here<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
