--- a/privacy.html
+++ b/privacy.html
@@ -36,14 +36,14 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="https://geofflord.github.io/earwaxtreatment/"><!--Site Name-->Site Name<!--endSite Name--></a>
+       <a class="navbar-brand" href="https://geofflord.github.io/earwaxtreatment/index.html"><!--Site Name-->Site Name<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="https://geofflord.github.io/earwaxtreatment/">Home
+              <a class="nav-link" href="https://geofflord.github.io/earwaxtreatment/index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -76,7 +76,7 @@ body {
 <p>Effective date: 12-02-2022</p>
 
 
-<p><a href="https://geofflord.github.io/earwaxtreatment/"><!--Site Name-->Site Name<!--endSite Name--></a> ("us", "we", or "our") operates the <strong><!--Site Name-->Site Name<!--endSite Name--></strong> website (the "Service").</p>
+<p><a href="https://geofflord.github.io/earwaxtreatment/index.html"><!--Site Name-->Site Name<!--endSite Name--></a> ("us", "we", or "our") operates the <strong><!--Site Name-->Site Name<!--endSite Name--></strong> website (the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy  for <strong><!--Site Name-->Site Name<!--endSite Name--></strong> is based on the https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template Free Privacy Policy Template Website.</p>
 
@@ -265,3 +265,4 @@ body {
   </body>
 
 </html>
+
